# nib

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.claude/: master.md  settings.json
.claude/agents/: architect.md  backend-cas.md  design-figma.md  design.md  editor-frontend.md  glue-packaging.md  handwriting.md  planner.md  researcher.md  team-ops.md  tester.md
.claude/design-library/: INDEX.md  components.md  tokens.md
.claude/memory/: context-archive.md  context.md  global.md  issues.md  mistakes.md  patterns-archive.md  patterns.md
.claude/scripts/: tmux-grid-layout.sh
.claude/teams/: issues.md  playbook.md
docs/: Nib-Dock-v2-ref.html  design.md  feature.md  requirements.md  sidebar-design.md
docs/_archived/: design-ref-editor.html  dock-handoff.md  nav-dock-design.md  sidebar-handoff.md  sidebar-mockup.html
docs/design-artifacts/: login-modal.html  settings-overlay.html
plan/: README.md  ROADMAP.md
plan/accounts-cloud-sync/: ROADMAP.md
plan/agent-team-setup/: CHECKPOINT.md
plan/design-agent-library/: ROADMAP.md
plan/dock-v2/: PLAN.md
plan/free-caret-rebuild/: ROADMAP.md
plan/free-caret-v2/: ROADMAP.md
plan/maintenance/: ROADMAP.md
plan/nib-editor-rebuild/: PLAN.md
plan/nib-mock-ui/: PLAN.md
server/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+221 files in other folders)
