[package]
name = "nib"
version = "0.0.0"
description = "Nib — notepad toán học sống"
authors = []
edition = "2021"

# TODO sidecar: uncomment when implementing Python SymPy sidecar (glue-packaging IPC session 3+)
# tauri-plugin-shell = "2"

[lib]
name = "nib_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS keychain — token storage (Phase A.2, CC-4 chốt)
# Linux: zbus-secret-service-keyring-store (default) → GNOME Keyring/KWallet via D-Bus
# Windows: windows-native-keyring-store (default) → Credential Manager
# macOS: cần apple-native-keyring-store (thêm khi build macOS)
keyring = "4"
